--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ navbar-links:
   Resources:
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
-  Meet The Team: "http://fission310.github.io"
+  Meet The Team: "bios"
   Library: "library"
 
 # Image to show in the navigation bar - image must be a square (width = height)
