--- a/_config.yml
+++ b/_config.yml
@@ -26,12 +26,12 @@ navbar-links:
   Freight Frenzy: "freightfrenzy"
   Meeting Notes: "meetingnotes"
   Past Competitions: "pastcompetitions"
-  About Us: "aboutus"
+  #About Us: "aboutus"
   #Resources:
   #  - Learn markdown: "http://www.markdowntutorial.com/"
   #  - GitHub Pages: "https://pages.github.com/"
   Meet The Team: "bios"
-  Library: "library"
+  #Library: "library"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
